--- a/resources/style_gtk.css
+++ b/resources/style_gtk.css
@@ -189,15 +189,9 @@ box.sidebar toolbar toolbutton {
 }
 box.sidebar toolbar button {
     margin: 0px;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    padding-left: 5px;
-    padding-right: 4px;
-    border-left-width: 0px;
-    border-right-width: 0px;
+    padding: 6px;
+    border-width: 0px;
     border-radius: 0px;
-    border-color: mix(@theme_base_color, @theme_bg_color, 0.5);
-    background: none;
     box-shadow: none;
 }
 box.sidebar toolbar toolbutton.first button {
@@ -205,11 +199,9 @@ box.sidebar toolbar toolbutton.first button {
 }
 box.sidebar toolbar button:checked {
     background: mix(@theme_base_color, @borders, 0.45);
-    border-color: @borders;
 }
 box.sidebar toolbar button:active {
     background: mix(@theme_base_color, @borders, 0.45);
-    border-color: @borders;
 }
 box.sidebar > box {
     background-color: @theme_base_color;
@@ -229,7 +221,6 @@ box.sidebar flowbox flowboxchild button {
     border-top-width: 0px;
     border-color: mix(@borders, @theme_base_color, 0.68);
     margin: 0px;
-    padding-top: 6px;
     padding-top: 5px;
     border-radius: 0px;
     box-shadow: none;
@@ -264,24 +255,16 @@ box.shortcutsbar toolbar toolbutton {
 }
 box.shortcutsbar toolbar button {
     margin: 0px;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    padding-left: 5px;
-    padding-right: 4px;
-    border-left-width: 0px;
-    border-right-width: 0px;
+    padding: 6px;
+    border-width: 0px;
     border-radius: 0px;
-    border-color: mix(@theme_base_color, @theme_bg_color, 0.5);
-    background: none;
     box-shadow: none;
 }
 box.shortcutsbar toolbar button:checked {
     background: mix(@theme_base_color, @borders, 0.45);
-    border-color: @borders;
 }
 box.shortcutsbar toolbar button:active {
     background: mix(@theme_base_color, @borders, 0.45);
-    border-color: @borders;
 }
 popover.menu-own-quotes-symbolic {
     margin-left: 0px;
@@ -306,6 +289,7 @@ box.preview > box button {
     margin: 0px;
     box-shadow: none;
     border-radius: 0px;
+    padding: 6px;
 }
 box.preview > box button.zoom_in_button {
     margin-right: 2px;
@@ -430,4 +414,11 @@ box.document-wizard-page box.margins-box spinbutton.top {
 }
 box.document-wizard-page box.margins-box spinbutton.bottom {
     border-bottom: 0px;
+}
+
+paned.hidden-separator separator {
+    padding: 0px;
+}
+paned.visible-separator separator {
+    padding: 4px;
 }
