--- a/resources/style_gtk.css
+++ b/resources/style_gtk.css
@@ -487,7 +487,7 @@ box.document-wizard-page box.margins-box spinbutton.bottom {
     border-bottom: 0px;
 }
 
-.include-bibtex-file-dialog stack {
+.include-bibtex-file-dialog .stack-wrapper {
     border: 1px solid @borders;
 }
 .include-bibtex-file-dialog button {
