--- a/resources/style_gtk.css
+++ b/resources/style_gtk.css
@@ -322,6 +322,9 @@ box.shortcutsbar toolbar button:active {
 popover.menu-own-quotes-symbolic {
     margin-left: 0px;
 }
+popover label.keyboard-shortcut {
+    color: mix(@theme_base_color, @theme_fg_color, 0.6);
+}
 
 /*
 ** preview
