--- a/dialogs/keyboard_shortcuts/shortcuts_window.ui
+++ b/dialogs/keyboard_shortcuts/shortcuts_window.ui
@@ -273,6 +273,13 @@
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="visible">1</property>
+                <property name="accelerator">&lt;ctrl&gt;Return</property>
+                <property name="title" translatable="yes">New Line (\\)</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="visible">1</property>
                 <property name="accelerator">&lt;ctrl&gt;B</property>
                 <property name="title" translatable="yes">Bold Text</property>
               </object>
