--- a/dialogs/keyboard_shortcuts/shortcuts_window.ui
+++ b/dialogs/keyboard_shortcuts/shortcuts_window.ui
@@ -326,6 +326,13 @@
                 <property name="title" translatable="yes">List Item</property>
               </object>
             </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="visible">1</property>
+                <property name="accelerator">&lt;ctrl&gt;E</property>
+                <property name="title" translatable="yes">Environment</property>
+              </object>
+            </child>
           </object>
         </child>
         <child>
