--- a/setzer/resources/style_gtk.css
+++ b/setzer/resources/style_gtk.css
@@ -347,6 +347,15 @@ box.preview > box button:checked {
 box.preview > box button:active {
     background: mix(@theme_base_color, @borders, 0.45);
 }
+box.preview > box button.zoom_level_button {
+    padding: 6px 5px;
+}
+box.preview > box button.zoom_level_button label {
+    padding: 1px 4px;
+    background: @theme_base_color;
+    border: 1px solid @borders;
+    border-radius: 3px;
+}
 box.preview_blank {
     background-color: @theme_bg_color;
     background-color: mix(@theme_base_color, @theme_bg_color, 0.5);
