--- a/data/resources/style_gtk.css
+++ b/data/resources/style_gtk.css
@@ -393,6 +393,20 @@ box.help > box button {
     border-radius: 0px;
     padding: 6px;
 }
+box.help > box button label {
+    text-decoration: underline;
+}
+box.help > box button:checked {
+    background: mix(@theme_base_color, @borders, 0.45);
+}
+box.help > box button:active {
+    background: mix(@theme_base_color, @borders, 0.45);
+}
+label.location-label {
+    margin-top: 5px;
+    font-size: 9pt;
+    color: mix(@theme_base_color, @theme_fg_color, 0.6);
+}
 
 /*
 ** search bar
