--- a/data/resources/style_gtk.css
+++ b/data/resources/style_gtk.css
@@ -11,42 +11,40 @@ paned.sidebar_paned {
 */
 
 box.autocomplete {
-    background-color: @theme_bg_color;
-    box-shadow: 0px 0px 1px mix(@borders, @theme_bg_color, 0.3);
-    border-radius: 2px;
-    border-bottom: 1px solid mix(@borders, @theme_bg_color, 0.5);
-    border-top: 1px solid mix(@borders, @theme_bg_color, 0.5);
     padding: 0px;
+}
+box.autocomplete list {
+    background-color: #f9f06b;
+    border-radius: 1px;
 }
 box.autocomplete list row {
     padding-top: 0px;
     padding-bottom: 0px;
-    padding-left: 3px;
-    padding-right: 3px;
-    border-radius: 0px;
+    padding-left: 2px;
+    padding-right: 2px;
+    border-radius: 1px;
 }
 box.autocomplete list row:selected {
-    padding-left: 4px;
-    padding-right: 4px;
+    background: mix(@borders, @theme_bg_color, 0.5);
+    background: #f8e45c;
 }
 box.autocomplete list row:not(:selected) {
     background-color: @theme_bg_color;
-    border-right: 1px solid mix(@borders, @theme_bg_color, 0.5);
-    border-left: 1px solid mix(@borders, @theme_bg_color, 0.5);
+    background-color: #f9f4af;
+}
+box.autocomplete list label {
+    color: #000;
 }
 box.autocomplete label.infobox {
-    border-top: 1px dotted @borders;
+    border-top: 1px dotted mix(#f9f4af, #000, 0.2);
+    border-radius: 1px;
     padding-top: 1px;
     padding-bottom: 2px;
-    margin-top: 0px;
     padding-left: 3px;
     padding-right: 3px;
-    background-color: @theme_bg_color;
     font-size: 14px;
-    color: @theme_fg_color;
-    opacity: 0.65;
-    border-right: 1px solid mix(@borders, @theme_bg_color, 0.5);
-    border-left: 1px solid mix(@borders, @theme_bg_color, 0.5);
+    color: #000;
+    background-color: #f9f4af;
 }
 
 /*
