--- a/data/resources/style_gtk.css
+++ b/data/resources/style_gtk.css
@@ -5,9 +5,6 @@
 paned.sidebar_paned {
     background-color: mix(@theme_base_color, @theme_bg_color, 0.5);
 }
-scrollbar slider {
-    min-height: 10px;
-}
 
 /*
 ** document view
@@ -15,6 +12,9 @@ scrollbar slider {
 
 box.autocomplete {
     padding: 0px;
+}
+box.autocomplete scrollbar slider {
+    min-height: 12px;
 }
 box.autocomplete list {
     background-color: #fff895;
@@ -111,6 +111,9 @@ popover.documentchooser box.not_found label {
 .open-docs-popover list,
 .open-docs-popover row:not(:hover):not(:selected) {
     background-color: @theme_bg_color;
+}
+.open-docs-popover scrollbar slider {
+    min-height: 12px;
 }
 .open-docs-popover .frame {
     border-width: 0px;
