set min-height only on vertical scrollbar in autocomplete window

--- a/data/resources/style_gtk.css
+++ b/data/resources/style_gtk.css
@@ -13,7 +13,7 @@ paned.sidebar_paned {
 box.autocomplete {
     padding: 0px;
 }
-box.autocomplete scrollbar slider {
+box.autocomplete scrollbar.right slider {
     min-height: 12px;
 }
 box.autocomplete list {
