set editor font in preferences

--- a/data/resources/style_gtk.css
+++ b/data/resources/style_gtk.css
@@ -47,7 +47,7 @@ box.autocomplete label.infobox {
     padding-right: 3px;
     font-size: 13px;
     color: #000;
-    background-color: #f9f4af;
+    background-color: #fff895;
 }
 
 /*
