--- a/data/resources/style_gtk.css
+++ b/data/resources/style_gtk.css
@@ -406,7 +406,8 @@ box.help > box button:active {
     background: mix(@theme_base_color, @borders, 0.45);
 }
 label.location-label {
-    margin-top: 5px;
+    margin-top: 2px;
+    margin-bottom: 5px;
     font-size: 9pt;
     color: mix(@theme_base_color, @theme_fg_color, 0.6);
 }
