--- a/data/resources/style_gtk.css
+++ b/data/resources/style_gtk.css
@@ -5,6 +5,10 @@
 paned.sidebar_paned {
     background-color: mix(@theme_base_color, @theme_bg_color, 0.5);
 }
+button.new-document-menu-button {
+    padding-left: 0px;
+    padding-right: 0px;
+}
 
 /*
 ** document view
