--- a/data/resources/style_gtk.css
+++ b/data/resources/style_gtk.css
@@ -55,6 +55,23 @@ box.autocomplete label.infobox {
 }
 
 /*
+** welcome-screen
+*/
+
+box.welcome {
+    margin-left: 150px;
+    margin-right: 150px;
+    margin-bottom: 50px;
+}
+label.welcome-header {
+    font-size: 48px;
+    padding-bottom: 18px;
+    font-weight: 200;
+}
+label.welcome-description {
+}
+
+/*
 ** open documents
 */
 
