change font size for welcome screen

--- a/data/resources/style_gtk.css
+++ b/data/resources/style_gtk.css
@@ -64,7 +64,7 @@ box.welcome {
     margin-bottom: 50px;
 }
 label.welcome-header {
-    font-size: 48px;
+    font-size: 32pt;
     padding-bottom: 18px;
     font-weight: 200;
 }
