--- a/data/resources/style_gtk.css
+++ b/data/resources/style_gtk.css
@@ -91,12 +91,11 @@ popover.documentchooser list row label {
     margin-right: 8px;
     margin-top: 3px;
     margin-bottom: 5px;
-    color: @theme_fg_color;
 }
 popover.documentchooser list row label.folder {
     margin-top: 5px;
     font-size: 9pt;
-    color: mix(@theme_base_color, @theme_fg_color, 0.6);
+    opacity: 0.5;
 }
 popover.documentchooser box.not_found {
     margin-bottom: 12px;
