--- a/data/resources/style_gtk.css
+++ b/data/resources/style_gtk.css
@@ -238,22 +238,22 @@ box.buildlog > box button {
 .sidebar {
     background-color: @theme_base_color;
 }
-.sidebar toolbar {
+.sidebar box.toolbar-box {
     padding: 0px;
     margin: 0px;
     background-color: @theme_base_color;
 }
-.sidebar toolbar button {
+.sidebar box button {
     margin: 0px;
     padding: 6px;
     border-width: 0px;
     border-radius: 0px;
     box-shadow: none;
 }
-.sidebar toolbar button:checked {
+.sidebar box button:checked {
     background: mix(@theme_base_color, @borders, 0.45);
 }
-.sidebar toolbar button:active {
+.sidebar box button:active {
     background: mix(@theme_base_color, @borders, 0.45);
 }
 .sidebar box.tabs-box {
@@ -338,25 +338,25 @@ box.shortcutsbar {
     background-color: @theme_base_color;
     border-bottom: 1px solid mix(@theme_base_color, @borders, 0.5);
 }
-box.shortcutsbar toolbar {
+box.shortcutsbar box.toolbar-box {
     padding: 0px;
     margin: 0px;
     background-color: @theme_base_color;
 }
-box.shortcutsbar toolbar button {
+box.shortcutsbar box button {
     margin: 0px;
     padding: 6px;
     border-width: 0px;
     border-radius: 0px;
     box-shadow: none;
 }
-box.shortcutsbar toolbar button label {
+box.shortcutsbar box button label {
     text-decoration: underline;
 }
-box.shortcutsbar toolbar button:checked {
+box.shortcutsbar box button:checked {
     background: mix(@theme_base_color, @borders, 0.45);
 }
-box.shortcutsbar toolbar button:active {
+box.shortcutsbar box button:active {
     background: mix(@theme_base_color, @borders, 0.45);
 }
 popover.menu-own-quotes-symbolic {
